Release 18.04.2 (pending)
==========================
- Added LimeSDR-USB support to LimeQuickTest
- Some fixes for LimeSDR-QPCIe
- Added HBD/HBI bypass mode for LimeSDR-USB
- Fixed some issues with GFIR usage

Release 18.04.1 (2018-04-19)
==========================

- Add multiple device support for LimeSDR-Mini
- Add QuickTest Utility for LimeSDR-Mini
- Remove calibration cache database
- LimeSuiteGUI: Remove duplicate information from 'Device Info' panel

Release 18.04.0 (2018-04-06)
==========================

- Fixed Tx filter calibration
- Fixed FPGA PLL configuration when B channel is disabled
- Fixed non-working controls in LimeSuiteGUI 'TRX Gain' tab
- Changed CGEN VCO tune algorithm
- LimeSDR-USB v1.4 updated to r2.16 gateware

Release 18.03.0 (2018-03-28)
==========================

SoapyLMS changes:
- Do not tune NCO when LO is within tuning range
- Filter BW reported to match filtersCalibration
- Function implementations changed to use same code as LMS API

LimeSuiteGUI changes:
- Added log levels
- Added additional controls to SPI panel
- Reduced number of programming modes in Programming panel

LimeSuite library changes:
- Added LimeSDR-Mini programming
- Changed default settings for LimeSDR-Mini
- Updated calibrations
- Add phase alignment for dual channel configuration
- Updated FPGA PLL configuration
- Fix B channel only streaming
- Fixed LMS7002M::GetPathRFE for LNAH case
- Fixed CGEN not tuning to 484-487 MHz

LMS API changes:
- LMS_Open() can no longer succeed without connecting to hardware
- LMS_Disconnect() and LMS_IsOpen() are now deprecated because of above change
- Changed firmware/gateware programming functions
- Changed lms_dev_info_t structure
- LMS_SetLOFrequency() now attempts to set different frequencies for A/B channels using NCO
- Fix Rx NCO direction flip (downconvert flag used to set Rx NCO to upconvert) 
- Disabling LPF is now same as setting it to maximum bandwidth 
- Extented gain range for LMS_SetGaindB()

Other changes: