@@ -4,6 +4,7 @@ Release 18.04.2 (pending)
 - Some fixes for LimeSDR-QPCIe
 - Added HBD/HBI bypass mode for LimeSDR-USB
 - Fixed some issues with GFIR usage
+- Fix LimeSuiteConfig for debian packages
 
 Release 18.04.1 (2018-04-19)
 ==========================
